--- a/project01/index.html
+++ b/project01/index.html
@@ -217,8 +217,7 @@
     </div>
     <div class="footer">
         <div class="content">
-            <p>The code and data used for this analysis are available in
-                <a href="https://github.com/yasu25-NY/projct1_data" target="_blank">this GitHub repository</a></p>
+        <p>The code and data used for this analysis are available in<a href="https://github.com/yasu25-NY/projct1_data" target="_blank">this GitHub repository</a></p>
         </div>
     </div>
 </body>
