--- a/project01/index.html
+++ b/project01/index.html
@@ -212,13 +212,12 @@
         <p>Some dangerous tunnels have been closed and replaced with new roads, while others in depopulated areas are simply shut down. These abandoned closures may be a temporary fix, but letting them deteriorate is not a lasting solution.</p>
         <p>With Japan’s declining population and shifting attitudes toward the environment, the time has come to reconsider not only how unnecessary infrastructure is decommissioned, but also whether new roads should be built at all. A more 
             careful and phased approach to retiring and removing aging infrastructure is needed, rather than simply letting it fall into neglect.</p>
-        
+        <p>The code and data used for this analysis are available in<a href="https://github.com/yasu25-NY/projct1_data" target="_blank">this GitHub repository</a></p>
         
     </div>
     <div class="footer">
         <div class="content">
-            <p>The code and data used for this analysis are available in
-                <a href="https://github.com/yasu25-NY/projct1_data" target="_blank">this GitHub repository</a></p>
+            <p>The code and data used for this analysis are available in<a href="https://github.com/yasu25-NY/projct1_data" target="_blank">this GitHub repository</a></p>
         </div>
     </div>
 </body>
